<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home_cliente"
            android:title="@string/nav_home"
            android:icon="@drawable/icon_home"
            android:checked="true"
            />
        <item android:id="@+id/nav_perfil_cliente"
            android:title="@string/nav_perfil"
            android:icon="@drawable/user"
            />
        <item android:id="@+id/nav_showEvent_cliente"
            android:title="@string/nav_showEvent"
            android:icon="@android:drawable/ic_menu_my_calendar"
            />
        <item android:id="@+id/nav_cerrarSesion_cliente"
            android:title="@string/nav_cerrarSesion"
            android:icon="@drawable/cerrar_sesion"
            />
    </group>

</menu>